--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Semences de pays</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+<header>
+  <h1>Semences des Pays</h1>
+  </header>
+
+
+
+
+
+
+
+
+
+  </body>
 </html>
