--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   <body>
 <header>
   <h1>Semences des Pays</h1>
-  </header>
-
-
-
-
-
+<a class="header-links">
+<p>Nos semences</p><p>Point de vente</p><p>Contact</p>
+</a>
+</header>
 
 
 
