Added a description to main with an animation that scrolls in infinite
Here's the link to the codepen that helped me achieve this : https://codepen.io/seoungmohwa/pen/WNdMNZP

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-<header>
-  <h1>Semences des Pays</h1>
-<a class="header-links">
-<p>Nos semences</p><p>Point de vente</p><p>Contact</p>
-</a>
-<hr>
-</header>
-
-
-
-
+    <header>
+      <h1>Semences des Pays</h1>
+      <a class="header-links">
+        <p>Nos semences</p>
+        <p>Point de vente</p>
+        <p>Contact</p>
+      </a>
+      <hr />
+    </header>
+    <main>
+      <div class="scroll  about-scroll">
+        <div class="track">
+          <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
+        </div>
+    </main>
   </body>
 </html>
