--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <div class="track">
           <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
         </div>
+        <h2>Nos semences</h2>
+        <p>Semences de pays développe une production de semences reproductibles, 
+          rustiques et adaptés à une agriculture 
+          biologique proche des cycles de la 
+          nature, en collaboration avec les 
+          initiatives nourricières de proximité.</p>
     </main>
   </body>
 </html>
