--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <main>
       <div class="scroll  about-scroll">
         <div class="track">
-          <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
+          <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE 
+            TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
         </div>
         <h2>Nos semences</h2>
         <p>Semences de pays développe une production de semences reproductibles, 
@@ -27,6 +28,39 @@
           biologique proche des cycles de la 
           nature, en collaboration avec les 
           initiatives nourricières de proximité.</p>
+          <div class="container">
+            <div class="slider">
+              <div class="slider-content">
+                <figure class="show">
+                  <img src="img/12_expo-semences.ch.png" alt="Coffee">
+                </figure>
+                <figure>
+                  <img src="img/14_expo-semences.ch.png" alt="Lamp">
+                </figure>
+                <figure>
+                  <img src="img/17_expo-semences.ch.png" alt="Plant">
+                </figure>
+                <figure>
+                  <img src="img/22_expo-semences.ch.png" alt="Plant">
+                </figure>
+                <figure>
+                  <img src="img/25_expo-semences.ch.png" alt="Plant">
+                </figure>
+                <figure>
+                  <img src="img/32_expo-semences.ch.png" alt="Plant">
+                </figure>
+              </div>
+              <div class="slider-navigation">
+                <button>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </button>
+                <button>
+                  <i class="fa-solid fa-chevron-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        <script type="text/javascript" src="index.js"></script>
     </main>
   </body>
 </html>
