finished the slider in main

--- a/index.html
+++ b/index.html
@@ -32,30 +32,27 @@
             <div class="slider">
               <div class="slider-content">
                 <figure class="show">
-                  <img src="img/12_expo-semences.ch.png" alt="Coffee">
+                  <figure>
+                    <img src="img/32_expo-semences.ch.png" alt="9 sprouts">
+                  </figure>
+                  <img src="img/12_expo-semences.ch.png" alt="Man taking care of plants in a garden">
                 </figure>
                 <figure>
-                  <img src="img/14_expo-semences.ch.png" alt="Lamp">
+                  <img src="img/14_expo-semences.ch.png" alt="Purple flowers">
                 </figure>
                 <figure>
-                  <img src="img/17_expo-semences.ch.png" alt="Plant">
+                  <img src="img/17_expo-semences.ch.png" alt="Man taking care of plants inside">
                 </figure>
                 <figure>
-                  <img src="img/22_expo-semences.ch.png" alt="Plant">
+                  <img src="img/22_expo-semences.ch.png" alt="Three people holding pumpkins">
                 </figure>
                 <figure>
-                  <img src="img/25_expo-semences.ch.png" alt="Plant">
-                </figure>
-                <figure>
-                  <img src="img/32_expo-semences.ch.png" alt="Plant">
+                  <img src="img/25_expo-semences.ch.png" alt="Landscape garden with a building">
                 </figure>
               </div>
               <div class="slider-navigation">
                 <button>
-                  <i class="fa-solid fa-chevron-left"></i>
-                </button>
-                <button>
-                  <i class="fa-solid fa-chevron-right"></i>
+                  <i class="arrow">></i>
                 </button>
               </div>
             </div>
