put my box images in the article section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE 
             TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
         </div>
-        <h2>Nos semences</h2>
+        <h2>À propos</h2>
         <p>Semences de pays développe une production de semences reproductibles, 
           rustiques et adaptés à une agriculture 
           biologique proche des cycles de la 
@@ -35,19 +35,20 @@
                   <figure>
                     <img src="img/32_expo-semences.ch.png" alt="9 sprouts">
                   </figure>
-                  <img src="img/12_expo-semences.ch.png" alt="Man taking care of plants in a garden">
+                  <img src="img/12_expo-semences.ch.png" alt="Man taking care of plants in a garden" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/14_expo-semences.ch.png" alt="Purple flowers">
+                  <img src="img/14_expo-semences.ch.png" alt="Purple flowers" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/17_expo-semences.ch.png" alt="Man taking care of plants inside">
+                  <img src="img/17_expo-semences.ch.png" alt="Man taking care of plants inside" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/22_expo-semences.ch.png" alt="Three people holding pumpkins">
+                  <img src="img/22_expo-semences.ch.png" alt="Three people holding pumpkins" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/25_expo-semences.ch.png" alt="Landscape garden with a building">
+                  <img src="img/25_expo-semences.ch.png" alt="Landscape garden with a building" class="slider-img">
+                </figure>
                 </figure>
               </div>
               <div class="slider-navigation">
@@ -59,5 +60,13 @@
           </div>
         <script type="text/javascript" src="index.js"></script>
     </main>
+    <article>
+      <h2>Nos semences</h2>
+      <div class="boxes">
+        <img src="img/pumpkin-box.pn.png" alt="box" class="box">
+        <img src="img/peas-box.png" alt="box" class="box">
+        <img src="img/flower-box.png" alt="box" class="box">
+      </div>
+    </article>
   </body>
 </html>
