inserted a button to the shop in my <article>
still need to but the links and center it which is the next step

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </figure>
               </div>
               <div class="slider-navigation">
-                <button>
+                <button class="slider-button">
                   <i class="arrow">></i>
                 </button>
               </div>
@@ -63,10 +63,19 @@
     <article>
       <h2>Nos semences</h2>
       <div class="boxes">
-        <img src="img/pumpkin-box.pn.png" alt="box" class="box">
-        <img src="img/peas-box.png" alt="box" class="box">
-        <img src="img/flower-box.png" alt="box" class="box">
+        <div class="pumpkin">
+        <img src="img/pumpkin-box.pn.png" alt="box">
+        </div>
+        <div class="peas">
+        <img src="img/peas-box.png" alt="box">
+        </div>
+        <div class="flower">
+        <img src="img/flower-box.png" alt="box">
+        </div>
       </div>
+      <button class="buying-button">Découvrez nos trésors de biodiversité sur 
+        le shop!
+      </button>
     </article>
   </body>
 </html>
