--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
   <body>
     <header>
       <h1>Semences des Pays</h1>
-      <a class="header-links">
-        <p>Nos semences</p>
-        <p>Point de vente</p>
-        <p>Contact</p>
-      </a>
+      <div class="header-links">
+        <a href="#nossemences">Nos semences</a>
+        <a href="#pointdevente">Point de vente</a>
+        <a href="#contact">Contact</a>
+      </div>
       <hr />
     </header>
     <main>
       <div class="scroll  about-scroll">
         <div class="track">
-          <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE 
-            TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
+          <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
         </div>
         <h2>À propos</h2>
         <p>Semences de pays développe une production de semences reproductibles, 
@@ -61,7 +60,7 @@
         <script type="text/javascript" src="index.js"></script>
     </main>
     <article>
-      <h2>Nos semences</h2>
+      <h2 id="nossemences">Nos semences</h2>
       <div class="boxes">
         <div class="pumpkin">
         <img src="img/pumpkin-box.pn.png" alt="box">
@@ -73,9 +72,9 @@
         <img src="img/flower-box.png" alt="box">
         </div>
       </div>
-      <button class="buying-button">Découvrez nos trésors de biodiversité sur 
-        le shop!
-      </button>
+      <a class="buying-button" href="https://shop.semencesdepays.ch" target="_blank">
+        Découvrez nos trésors de biodiversité sur le shop!
+      </a>
     </article>
   </body>
 </html>
