added the section "point de vente" and img of the swiss cart

--- a/index.html
+++ b/index.html
@@ -76,5 +76,9 @@
         Découvrez nos trésors de biodiversité sur le shop!
       </a>
     </article>
+    <div class="point-de-vente">
+      <h2 id="pointdevente">Où nous trouver</h2>
+      <img src="img/carte-suisse.svg">
+    </div>
   </body>
 </html>
