added the name of the places that are on my swiss cart

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
     <div class="point-de-vente">
       <h2 id="pointdevente">Où nous trouver</h2>
       <img src="img/carte-suisse.svg">
+      <p>
+        Chez mamie (GE)
+      </p>
+      <p>
+        Le Topinambour (VD)
+      </p>
+      <p>
+        Ferme du Joran (JU)
+      </p>
+      <p>
+        Le Grainier (VD)
+      </p>
     </div>
   </body>
 </html>
