started footer by adding main address
i realized that i've written swiss "cart" instead of map on my two previous commit, my bad…

--- a/index.html
+++ b/index.html
@@ -92,5 +92,10 @@
         Le Grainier (VD)
       </p>
     </div>
+    <footer>
+    <h2>NOUVELLE TERRE</h2>
+    <p>Rue du Grand-Verger 12<br>1920 Martigny
+      </p>
+    </footer>
   </body>
 </html>
