footer finished : added two addresses with a plant picto

--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
     </div>
     <footer>
     <h2>NOUVELLE TERRE</h2>
-    <p>Rue du Grand-Verger 12<br>1920 Martigny
-      </p>
+    <p class="main-address">Rue du Grand-Verger 12<br>1920 Martigny</p>
+      <h2 id="contact">SEMENCES DE PAYS</h2>
+    <p class="semences-de-pays-address">
+      Serres de Belle-Idée<br>Chemin du Petit-Bel-Air 2<br>1225 Chêne-Bourg<br>
+      info@semencesdepays.ch
+    </p>
+    <img src="img/plant-picto.png">
     </footer>
   </body>
 </html>
