added a button that brings me to the top of the page and added scroll behavior smooth

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Semences des Pays</h1>
+      <h1 id="top-of-the-page">Semences des Pays</h1>
       <div class="header-links">
         <a href="#nossemences">Nos semences</a>
         <a href="#pointdevente">Point de vente</a>
@@ -101,6 +101,12 @@
       info@semencesdepays.ch
     </p>
     <img src="img/plant-picto.png">
+    <a href="#top-of-the-page"
+        ><img
+          src="img/go-up-white.png"
+          alt="go to the top of the page button"
+          class="go-up-button"
+      /></a>
     </footer>
   </body>
 </html>
