footer modification : added an accordion list for the selling adresses
took the code from a previous project (16-Typoweb) and changed the styles so it suits my website

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <div class="scroll  about-scroll">
         <div class="track">
-          <p class="text -r">TOUTES NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
+          <p class="text -r">NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
         </div>
         <h2>À propos</h2>
         <p>Semences de pays développe une production de semences reproductibles, 
@@ -57,7 +57,6 @@
               </div>
             </div>
           </div>
-        <script type="text/javascript" src="index.js"></script>
     </main>
     <article>
       <h2 id="nossemences">Nos semences</h2>
@@ -79,18 +78,48 @@
     <div class="point-de-vente">
       <h2 id="pointdevente">Où nous trouver</h2>
       <img src="img/carte-suisse.svg">
-      <p>
-        Chez mamie (GE)
-      </p>
-      <p>
-        Le Topinambour (VD)
-      </p>
-      <p>
-        Ferme du Joran (JU)
-      </p>
-      <p>
-        Le Grainier (VD)
-      </p>
+      <div class="container">
+        <div class="accordion">
+          <ul class="list-unstyled">
+            <li>
+              <div class="question">
+                <h2>Chez Mamie</h2>
+                <span class="glyphicon glyphicon-chevron-down">+</span>
+              </div>
+              <div class="answer">
+              <p>Rue des Rois 17<br>1204 Genève</p>
+              </div>
+            </li>
+            <li>
+              <div class="question">
+                <h2>Le Topinambour</h2>
+                <span class="glyphicon glyphicon-chevron-down">+</span>
+              </div>
+              <div class="answer">
+              <p>Avenue William-Fraisse 9<br>1006 Lausanne</p>
+              </div>
+            </li>
+            <li>
+              <div class="question">
+                <h2>Ferme du Joran</h2>
+                <span class="glyphicon glyphicon-chevron-down">+</span>
+              </div>
+              <div class="answer">
+               <p>Chemin des Philosophes 15<br>1350 Orbe</p>
+              </div>
+            </li>
+            <li>
+            <div class="question">
+              <h2>Le Grainier</h2>
+              <span class="glyphicon glyphicon-chevron-down">+</span>
+            </div>
+            <div class="answer">
+            <p>Routes des Mines de Sel<br>1880 Bex</p>
+            </div>
+          </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <footer>
     <h2>NOUVELLE TERRE</h2>
@@ -107,6 +136,7 @@
           alt="go to the top of the page button"
           class="go-up-button"
       /></a>
+      <script type="text/javascript" src="index.js"></script>
     </footer>
   </body>
 </html>
