bug fix (thanks to Julien Minguely)
- banner with animation fix
- fixed body position
- fixed buttons positions
- added a class to my plant picto img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <main>
       <div class="scroll  about-scroll">
         <div class="track">
-          <p class="text -r">NOS SEMENCES SONT CERTIFIÉS BIOSUISSE</p> 
+          <p class="text -r">
+            NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
+            NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
+            NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
+          </p> 
         </div>
         <h2>À propos</h2>
         <p>Semences de pays développe une production de semences reproductibles, 
@@ -31,9 +35,7 @@
             <div class="slider">
               <div class="slider-content">
                 <figure class="show">
-                  <figure>
-                    <img src="img/32_expo-semences.ch.png" alt="9 sprouts">
-                  </figure>
+                
                   <img src="img/12_expo-semences.ch.png" alt="Man taking care of plants in a garden" class="slider-img">
                 </figure>
                 <figure>
@@ -129,7 +131,7 @@
       Serres de Belle-Idée<br>Chemin du Petit-Bel-Air 2<br>1225 Chêne-Bourg<br>
       info@semencesdepays.ch
     </p>
-    <img src="img/plant-picto.png">
+    <img src="img/plant-picto.png" class="plant-picto">
     <a href="#top-of-the-page"
         ><img
           src="img/go-up-white.png"
