Added figcaption to the pictures taken by the photographs
bug fixes in css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
           </p> 
         </div>
+        </div>
         <h2>À propos</h2>
         <p>Semences de pays développe une production de semences reproductibles, 
           rustiques et adaptés à une agriculture 
@@ -59,6 +60,9 @@
               </div>
             </div>
           </div>
+          <figcaption>"Semenciers, semencières – Au Nord et au Sud, un artisanat du
+            vivant"© Elisa Larvego, Christian Lutz, Serge Boulaz
+          </figcaption>
     </main>
     <article>
       <h2 id="nossemences">Nos semences</h2>
