converted my img to webp

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <div class="scroll  about-scroll">
         <div class="track">
-          <p class="text -r">
+          <p class="text">
             NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
             NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
             NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
@@ -36,20 +36,19 @@
             <div class="slider">
               <div class="slider-content">
                 <figure class="show">
-                
-                  <img src="img/12_expo-semences.ch.png" alt="Man taking care of plants in a garden" class="slider-img">
+                  <img src="img/12_expo-semences.ch.webp" alt="Man taking care of plants in a garden" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/14_expo-semences.ch.png" alt="Purple flowers" class="slider-img">
+                  <img src="img/14_expo-semences.ch.webp" alt="Purple flowers" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/17_expo-semences.ch.png" alt="Man taking care of plants inside" class="slider-img">
+                  <img src="img/17_expo-semences.ch.webp" alt="Man taking care of plants inside" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/22_expo-semences.ch.png" alt="Three people holding pumpkins" class="slider-img">
+                  <img src="img/22_expo-semences.ch.webp" alt="Three people holding pumpkins" class="slider-img">
                 </figure>
                 <figure>
-                  <img src="img/25_expo-semences.ch.png" alt="Landscape garden with a building" class="slider-img">
+                  <img src="img/25_expo-semences.ch.webp" alt="Landscape garden with a building" class="slider-img">
                 </figure>
                 </figure>
               </div>
@@ -68,13 +67,13 @@
       <h2 id="nossemences">Nos semences</h2>
       <div class="boxes">
         <div class="pumpkin">
-        <img src="img/pumpkin-box.pn.png" alt="box">
+        <img src="img/pumpkin-box.webp" alt="box">
         </div>
         <div class="peas">
-        <img src="img/peas-box.png" alt="box">
+        <img src="img/peas-box.webp" alt="box">
         </div>
         <div class="flower">
-        <img src="img/flower-box.png" alt="box">
+        <img src="img/flower-box.webp" alt="box">
         </div>
       </div>
       <a class="buying-button" href="https://shop.semencesdepays.ch" target="_blank">
@@ -83,7 +82,7 @@
     </article>
     <div class="point-de-vente">
       <h2 id="pointdevente">Où nous trouver</h2>
-      <img src="img/carte-suisse.svg">
+      <img src="img/carte-suisse.webp">
       <div class="container">
         <div class="accordion">
           <ul class="list-unstyled">
@@ -135,7 +134,7 @@
       Serres de Belle-Idée<br>Chemin du Petit-Bel-Air 2<br>1225 Chêne-Bourg<br>
       info@semencesdepays.ch
     </p>
-    <img src="img/plant-picto.png" class="plant-picto">
+    <img src="img/plant-picto.webp" class="plant-picto">
     <a href="#top-of-the-page"
         ><img
           src="img/go-up-white.png"
