replaced my fonts url
woff was missing which made the fonts unavailable on mobile

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
       <h1 id="top-of-the-page">Semences des Pays</h1>
       <div class="header-links">
         <a href="#nossemences">Nos semences</a>
-        <a href="#pointdevente">Point de vente</a>
+        <a href="#pointsdevente">Points de vente</a>
         <a href="#contact">Contact</a>
       </div>
       <hr />
     </header>
     <main>
-      <div class="scroll  about-scroll">
+      <div class="scroll about-scroll">
         <div class="track">
           <p class="text">
-            NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
-            NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
-            NOS SEMENCES SONT CERTIFIÉS BIOSUISSE
+            NOS SEMENCES SONT CERTIFIÉES BIOSUISSE
+            NOS SEMENCES SONT CERTIFIÉES BIOSUISSE
+            NOS SEMENCES SONT CERTIFIÉES BIOSUISSE
           </p> 
         </div>
         </div>
@@ -80,8 +80,8 @@
         Découvrez nos trésors de biodiversité sur le shop!
       </a>
     </article>
-    <div class="point-de-vente">
-      <h2 id="pointdevente">Où nous trouver</h2>
+    <div class="points-de-vente">
+      <h2 id="pointsdevente">Où nous trouver</h2>
       <img src="img/carte-suisse.webp">
       <div class="container">
         <div class="accordion">
