changed box img to final versions
put all the fonts in the right file

--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@
       <h2 id="nossemences">Nos semences</h2>
       <div class="boxes">
         <div class="pumpkin">
-        <img src="img/pumpkin-box.webp" alt="box">
+        <img src="img/pumpkin-box-front.webp" alt="pumpkin box from the front">
+        <img src="img/pumpkin-box-back.webp" alt="pumpkin box from the back">
         </div>
         <div class="peas">
-        <img src="img/peas-box.webp" alt="box">
+        <img src="img/peas-box-front.webp" alt="peas box from the front">
+        <img src="img/peas-box-back.webp" alt="peas box from the back">
         </div>
         <div class="flower">
-        <img src="img/flower-box.webp" alt="box">
+        <img src="img/flower-box-front.webp" alt="flower box from the front">
+        <img src="img/flower-box-back.webp" alt="flower box from the back">
         </div>
       </div>
       <a class="buying-button" href="https://shop.semencesdepays.ch" target="_blank">
